# green

./: .gitignore  README.md  otica.yaml  pyproject.toml  requirements.txt  run-tests.sh  tests.py
common/: makefile.mk
common/env_variables/: common.var  framework.var  gcp-uit-et-iedo-services.var
common/makefile_parts/: app.mk
docs/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  modules.rst.txt
docs/_sources/modules/: base.rst.txt  zulutime.rst.txt
docs/modules/: base.html  kerberos.html  ldap.html  oauth2.html
documentation/: index.md
prod/: local.var
sphinx-docs/source/: conf.py  index.rst  modules.rst
sphinx-docs/source/modules/: kerberos.rst  ldap.rst  oauth2.rst
stanford/green/: __init__.py
stanford/green/kerberos/: __init__.py
stanford/green/ldap/: __init__.py
stanford/green/oauth2/: __init__.py
stanford/green/utility/: __init__.py
stanford/green/zulutime/: __init__.py
