[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["stanford*"]

[project]
name = "stanford_green"
version = "0.1.0"
authors = [
  { name="Adam H. Lewenberg", email="adamhl@stanford.edu" },
]
description = "Useful Python utilities for the Stanford community"
readme = "README.md"
requires-python = ">=3.10"
